@@ -15,6 +15,7 @@
 - added: `SchemaOptions.clean()` alias to `$.model.$clean()`
 - added: a new route flag type `&group` something like `roles` but groups aren't evaluated
 - added: `route.groups` with defined groups
+- added: `DatabaseBuilder.insert(fn(doc))` can modify a document after `update` or `modify` has `insert` mode
 
 - updated: `GROUP()` by adding a new argument `url_prefix`
 
